# zfspp

./: .clang-format  .gitignore  CMakeLists.txt
include/: zfspp.h
src/: dataset.cpp  event_watcher.cpp  nvlist.cpp  pool.cpp  zfs.cpp
test/: test.cpp
